@@ -1,1 +1,2 @@
 # gui-project
+## --module-path /home/casino/Programming/GUI/javafx/lib/ --add-modules javafx.controls,javafx.fxml
